--- a/src/app/components/solutions-card/solutions-card.component.html
+++ b/src/app/components/solutions-card/solutions-card.component.html
@@ -3,7 +3,7 @@
     <p class="title">Soluciones</p>
     <table class="mt-2">
       <tbody>
-        <tr *ngFor="let item of data">
+        <tr *ngFor="let item of data" (click)="redirect(item.title)" style="cursor: pointer;">
           <td>
             <p>{{ item.title }}</p>
           </td>
