--- a/src/app/documents/solution-public-document/solution-public.component.html
+++ b/src/app/documents/solution-public-document/solution-public.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="set-12">
-    <div class="set-8">
+    <div class="set-6">
       <breadcrumbs-component>
         <li class="breadcrumb-item">Documento madre</li>
         <li class="breadcrumb-item">Economia</li>
@@ -11,6 +11,22 @@
     <div class="set-4 featured-users">
       <featured-users [inputAmount]="5"></featured-users>
     </div>
+    <div class="set-2">
+      <div class="header-buttons">
+        <div class="button-box">
+          <button type="button" mat-mini-fab color="warn" class="add-button green">
+            <mat-icon>create_new_folder</mat-icon>
+          </button>
+          <p>Agregar solución</p>
+        </div>
+        <div class="button-box">
+          <button type="button" mat-mini-fab color="warn" class="add-button purple">
+            <mat-icon style="color:white">create_new_folder</mat-icon>
+          </button>
+          <p>Agregar Testimonios</p>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="set-12" style="padding-bottom: 100px">
@@ -18,18 +34,15 @@
       <div class="set-12">
         <mat-card class="doc-description" style="height: 280px">
           <div class="set-12">
-            <div class="set-3">
+            <div class="set-3"
+              >
               <div class="imghldr">
                 <img src="../../../assets/images/trac.png" alt="" />
               </div>
               <div class="actions-box">
                 <div class="set-12">
                   <div class="set-3">
-                    <img
-                      src="../../../assets/images/like-button.png"
-                      alt=""
-                      width="70"
-                    />
+                    <img src="../../../assets/images/like-button.png" alt="" width="70" />
                   </div>
                   <div class="set-9" style="padding-left: 30px">
                     <p class="title">Relevancia ciudadana</p>
@@ -64,10 +77,10 @@
         </mat-card>
       </div>
       <div class="set-12 mt-2">
-        <mat-card class="doc-description" style="height: 280px">
+        <mat-card class="doc-description" style="height: 480px;padding: 30px;">
           <div class="set-12 mt-2">
             <div class="set-6 col-rgt-2">
-              <spider-chart></spider-chart>
+              <spider-chart [withBorder]="false"></spider-chart>
             </div>
             <div class="set-6 col-rgt-2">
               <circle-chart></circle-chart>
