--- a/src/app/documents/solution-public-document/solution-public.component.scss
+++ b/src/app/documents/solution-public-document/solution-public.component.scss
@@ -32,22 +32,23 @@
     p {
       font-size: 14px;
     }
-    .title{
+    .title {
       font-size: 14px;
       font-weight: 500;
-      color:white;
+      color: white;
     }
-    .value{
-      color:white;
+    .value {
+      color: white;
 
       font-size: 20px;
       font-weight: 800;
     }
     .vote-button {
-      background-color: #306EFF;
+      margin-top: 10px;
+      background-color: #306eff;
       padding: 6px 50px;
       border-radius: 4px;
-      color:white;
+      color: white;
       font-size: 14px;
       font-weight: 500;
     }
@@ -74,8 +75,7 @@
   .card-item {
     background-color: white;
     border-radius: 6px;
-    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
-      0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 
     .title {
       font-size: 14px;
@@ -123,8 +123,6 @@
 
   .card-title {
     color: #636363;
-    font-family: "Noto Sans";
-    font-style: normal;
     font-weight: 600;
     font-size: 18px;
     line-height: 30px;
@@ -136,8 +134,6 @@
   }
 
   .card-description {
-    font-family: "Noto Sans";
-    font-style: normal;
     font-weight: 400;
     font-size: 14px;
     text-align: justify;
@@ -157,6 +153,30 @@
     box-shadow: none !important;
     padding: 0px 10px;
     padding-bottom: 50px;
+  }
+  .header-buttons {
+    padding: 0px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .button-box {
+      width: 60px;
+      text-align: center;
+      .add-button {
+        color: white;
+      }
+      .green {
+        background-color: #20c588;
+      }
+      .purple {
+        background-color: #9747ff;
+      }
+      p {
+        font-size: 12px;
+        font-weight: 500;
+      }
+    }
   }
 }
 
