add new changes

--- a/src/app/documents/solution-public-document/solution-public.component.html
+++ b/src/app/documents/solution-public-document/solution-public.component.html
@@ -91,7 +91,7 @@
       </div>
     </div>
     <div class="set-4">
-      <p style="font-weight: 500; margin-bottom: 20px">Testimonios</p>
+      <p style="font-weight: 500; margin-bottom: 20px;font-weight: 600;">Testimonios</p>
       <div class="set-12 testimony-box" style="height: 300px">
         <testimony-card [data]="testimonials"></testimony-card>
       </div>
