--- a/src/app/components/set-avatar-dialog/set-avatar-dialog.component.html
+++ b/src/app/components/set-avatar-dialog/set-avatar-dialog.component.html
@@ -1,23 +1,25 @@
-<div class="set-12">
-  <div *ngIf="ready">
-    <button (click)="cropper.zoomIn()" ly-button appearance="icon">
-      <ly-icon>zoom_in</ly-icon>
-    </button>
-    <button (click)="cropper.zoomOut()" ly-button appearance="icon">
-      <ly-icon>zoom_out</ly-icon>
-    </button>
-    <button (click)="cropper.center()" ly-button appearance="icon">
-      <ly-icon>filter_center_focus</ly-icon>
-    </button>
-    <button (click)="cropper.rotate(-90)" ly-button appearance="icon">
-      <ly-icon>rotate_90_degrees_ccw</ly-icon>
-    </button>
-    <button (click)="cropper.fit()" ly-button>Fit</button>
-    <button (click)="cropper.fitToScreen()" ly-button>Fit to screen</button>
-    <button (click)="cropper.setScale(1)" ly-button>1:1</button>
-  </div>
-
-
+<div class="set-12 icons" *ngIf="ready">
+  <button (click)="cropper.zoomIn()" ly-button appearance="icon" color="primary" lyTooltip="Acercar">
+    <ly-icon>zoom_in</ly-icon>
+  </button>
+  <button (click)="cropper.zoomOut()" ly-button appearance="icon" color="primary" lyTooltip="Alejar">
+    <ly-icon>zoom_out</ly-icon>
+  </button>
+  <button (click)="cropper.center()" ly-button appearance="icon" color="primary" lyTooltip="Centrar">
+    <ly-icon>filter_center_focus</ly-icon>
+  </button>
+  <button (click)="cropper.rotate(-90)" ly-button appearance="icon" color="primary" lyTooltip="Girar">
+    <ly-icon>rotate_90_degrees_ccw</ly-icon>
+  </button>
+  <button (click)="cropper.fit()" ly-button appearance="icon" color="primary" lyTooltip="Ajustar a cuadro">
+    <ly-icon>aspect_ratio</ly-icon>
+  </button>
+  <button (click)="cropper.fitToScreen()" ly-button appearance="icon" color="primary" lyTooltip="Ajustar a pantalla">
+    <ly-icon>fit_screen</ly-icon>
+  </button>
+  <button (click)="cropper.setScale(1)" ly-button appearance="icon" color="primary" lyTooltip="Escala 1:1">
+    <ly-icon>repeat_one</ly-icon>
+  </button>
 </div>
 
 <div class="set-12">
@@ -36,6 +38,8 @@
 </div>
 
 <div class="set-12 ctrls">
-  <button ly-button raised bg="primary" (click)="dialogRef.close()">CANCELAR</button>
-  <button ly-button raised bg="primary" (click)="onUploadAvatar()">GUARDAR</button>
+  <button ly-button raised bg="accent" (click)="dialogRef.close()" [disabled]="submitted">Cancelar</button>
+  <button ly-button raised bg="primary" (click)="uploadAvatarImage()"
+    [disabled]="submitted">Guardar</button>
+  <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
 </div>
