--- a/src/app/components/set-avatar-dialog/set-avatar-dialog.component.scss
+++ b/src/app/components/set-avatar-dialog/set-avatar-dialog.component.scss
@@ -1,10 +1,21 @@
 :host {
+  .icons {
+    padding: 10px;
+    display: flex;
+  }
+
   .ctrls {
+    display: flex;
     padding: 0 20px 20px 20px;
-    text-align: right;
+    justify-content: flex-end;
+    align-items: center;
+
+    * {
+      margin: 0;
+    }
 
     button {
-      margin-left: 10px;
+      margin-right: 10px;
     }
 
     button:first-child {
