--- a/src/app/components/add-document-theme/add-document-theme.component.html
+++ b/src/app/components/add-document-theme/add-document-theme.component.html
@@ -3,7 +3,7 @@
     <h3>Agregar Problema</h3>
   </div>
   <div class="set-3 txt-right">
-    <button type="button" mat-icon-button color="primary" (click)="killDialog()">
+    <button type="button" mat-icon-button color="primary" (click)="killDialog()" [disabled]="submitted">
       <mat-icon>cancel</mat-icon>
     </button>
   </div>
@@ -54,8 +54,9 @@
           </div>
 
           <div class="set-12 txt-right ctrls">
-            <button type="submit" mat-raised-button color="primary"
-              [disabled]="addThemeFormGroup.invalid || isSubmitted" *ngIf="!canAddSolution">Guardar</button>
+            <button type="submit" mat-raised-button color="primary" [disabled]="addThemeFormGroup.invalid || submitted"
+              *ngIf="!canAddSolution">Guardar</button>
+            <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
           </div>
         </form>
       </div>
@@ -98,7 +99,8 @@
 
           <div class="set-12 txt-right ctrls">
             <button type="submit" mat-raised-button color="primary"
-              [disabled]="addSolutionFormGroup.invalid || isSolSubmitted">Guardar</button>
+              [disabled]="addSolutionFormGroup.invalid || submitted">Guardar</button>
+            <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
           </div>
         </form>
       </div>
