--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -39,15 +39,15 @@
                 <mat-icon>more_vert</mat-icon>
               </button>
               <mat-menu #menu="matMenu">
-                <button mat-menu-item>
+                <button mat-menu-item (click)="popEditCategoryDialog()">
                   <mat-icon>edit</mat-icon>
                   <span>Editar</span>
                 </button>
-                <button mat-menu-item>
+                <button mat-menu-item disabled="">
                   <mat-icon>cloud_upload</mat-icon>
                   <span>Cargar template</span>
                 </button>
-                <button mat-menu-item>
+                <button mat-menu-item disabled="">
                   <mat-icon>cloud_download</mat-icon>
                   <span>Descargar template</span>
                 </button>
@@ -134,7 +134,7 @@
               <li class="top-list-item">
                 <span>Inseguridad</span>
               </li-->
-            </ol> 
+            </ol>
           </div>
 
           <div class="set-4">
@@ -221,9 +221,9 @@
                   <button mat-menu-item (click)="linkTopic(element._id)">
                     <mat-icon>visibility</mat-icon>
                     <span>Abrir problematica</span>
-                  </button>                  
+                  </button>
                 </mat-menu>
-                
+
               </td>
             </ng-container>
 
