--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -34,15 +34,15 @@
                 <mat-icon>more_vert</mat-icon>
               </button>
               <mat-menu #menu="matMenu">
-                <button mat-menu-item>
+                <button mat-menu-item (click)="popEditDocumentDialog()">
                   <mat-icon>edit</mat-icon>
                   <span>Editar</span>
                 </button>
-                <button mat-menu-item>
+                <button mat-menu-item disabled="">
                   <mat-icon>cloud_upload</mat-icon>
                   <span>Cargar template</span>
                 </button>
-                <button mat-menu-item>
+                <button mat-menu-item disabled="">
                   <mat-icon>cloud_download</mat-icon>
                   <span>Descargar template</span>
                 </button>
