--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -16,10 +16,10 @@
       </breadcrumbs-component>
     </div>
     <div class="set-6 txt-right">
-      <span class="created-by">
+      <!--span class="created-by">
         Autor: <span class="author">{{selectedCategory.createdBy.firstname}}
           {{selectedCategory.createdBy.lastname}}</span>
-      </span>
+      </span-->
     </div>
   </div>
 
@@ -27,13 +27,13 @@
     <div class="set-3 col-lft">
       <mat-card class="set-12 doc-description">
         <div class="set-12 imghldr">
-          <mat-icon *ngIf="document.images.length == 0">panorama</mat-icon>
-          <img [src]="document.images[0]" alt="" *ngIf="document.images.length != 0">
+          <mat-icon *ngIf="subcategory.images.length == 0">panorama</mat-icon>
+          <img [src]="subcategory.images[0]" alt="" *ngIf="subcategory.images.length != 0">
         </div>
 
         <div class="set-12 infohldr">
           <div class="set-12 card-title">
-            <div class="set-10">{{ selectedCategory.category.name }}</div>
+            <div class="set-10">{{ subcategory.category.name }}</div>
             <div class="set-2 txt-right">
               <button type="button" [matMenuTriggerFor]="menu">
                 <mat-icon>more_vert</mat-icon>
@@ -54,8 +54,8 @@
               </mat-menu>
             </div>
           </div>
-          <p class="card-description" *ngIf="selectedCategory.description != null">{{selectedCategory.description}}</p>
-          <button type="button" class="toolbtn" *ngIf="selectedCategory.description == null">
+          <p class="card-description" *ngIf="subcategory.description != null">{{subcategory.description}}</p>
+          <button type="button" class="toolbtn" *ngIf="subcategory.description == null">
             <small>Agregar descripción</small>
           </button>
           <avatars-row [users]="collaborators"></avatars-row>
@@ -64,7 +64,7 @@
     </div>
 
     <div class="set-9 col-rgt">
-      <div class="set-12">
+      <div class="set-12 item-card">
         <div class="set-4">
           <mat-form-field appearance="outline">
             <mat-label>Cobertura</mat-label>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="set-8 txt-right">
-          <button type="button" mat-mini-fab color="accent" class="mini" matTooltip="Agregar Esquema" disabled>
+          <!--button type="button" mat-mini-fab color="accent" class="mini" matTooltip="Agregar Esquema" disabled>
             <mat-icon>group_add</mat-icon>
           </button>
           <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Colaborador" disabled>
@@ -86,39 +86,13 @@
           <button type="button" mat-mini-fab color="warn" class="mini" matTooltip="Agregar Categoría"
             (click)="popAddDocumentCategory()">
             <mat-icon>create_new_folder</mat-icon>
-          </button>
+          </button-->
         </div>
       </div>
 
-      <div class="set-12">
+      <div class="set-6 item-card">
         <mat-card class="set-12 info-lists">
-          <div class="set-4">
-            <div class="inner-card">
-              <div class="set-4">
-                <span class="roundico-green">
-                  <mat-icon>groups</mat-icon>
-                </span>
-              </div>
-              <div class="set-8">
-                <p><small>Usuarios</small></p>
-                <strong>{{collaborators.length}}</strong>
-              </div>
-            </div>
-
-            <div class="inner-card">
-              <div class="set-4">
-                <span class="roundico-orange">
-                  <mat-icon>front_hand</mat-icon>
-                </span>
-              </div>
-              <div class="set-8">
-                <p><small>Interacciones</small></p>
-                <strong>0</strong>
-              </div>
-            </div>
-          </div>
-
-          <div class="set-4">
+          <div class="set-12">
             <p class="list-title">
               <small>Soluciones</small>
               <mat-icon class="icon-insights">insights</mat-icon>
@@ -127,8 +101,8 @@
             <ol class="top-list">
               <!--li class="top-list-item">
                 <span>Inseguridad</span>
-              </li-->
-              <!--li class="top-list-item">
+              </li>
+              <li class="top-list-item">
                 <span>Inseguridad</span>
               </li>
               <li class="top-list-item">
@@ -136,21 +110,25 @@
               </li-->
             </ol> 
           </div>
+        </mat-card>
+      </div>
 
-          <div class="set-4">
+      <div class="set-6 item-card">
+        <mat-card class="set-12 info-lists">
+          <div class="set-12">
             <p class="list-title">
               <small>Problemas</small>
               <mat-icon class="icon-warnings">warning</mat-icon>
             </p>
 
-            <ol class="top-list">
+            <!--ol class="top-list">
               <li class="top-list-item" *ngFor="let topic of topics.slice(0, 4);">
-                <span (click)="linkTopic(topic._id)">{{topic.title}}</span>
+                <span>{{topic.title}}</span>
               </li>
-            </ol>
+            </ol-->
           </div>
         </mat-card>
-      </div>
+      </div>      
 
       <div class="set-12 empty-subs category-list" *ngIf="subcategories.length == 0">
         <mat-card class="set-12">
@@ -170,37 +148,43 @@
         </mat-card>
       </div>
 
-      <div class="set-12 category-list" *ngIf="subcategories.length != 0">
+      <div class="set-12 category-list item-card" *ngIf="subcategories.length != 0">
         <mat-card>
-          <p class="title">Sub Categorías</p>
+          <p class="title">Temas</p>
           <table mat-table [dataSource]="dataSource" class="categories-table">
             <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef>Título</th>
+              <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let element">
-                <a href="javascript:void(0)">{{element.category.name}}</a>
+                {{element.name}}
               </td>
             </ng-container>
 
-            <ng-container matColumnDef="users">
-              <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-              <td mat-cell *matCellDef="let element">{{ element.users }}</td>
+            <ng-container matColumnDef="category">
+              <th mat-header-cell *matHeaderCellDef>Categoría</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.category }}
+              </td>
             </ng-container>
 
-            <ng-container matColumnDef="interactions">
-              <th mat-header-cell *matHeaderCellDef>Interacciones</th>
+            <ng-container matColumnDef="subcategory">
+              <th mat-header-cell *matHeaderCellDef>Subcategoría</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.interactions }}
+                {{ element.subcategory }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="solutions">
               <th mat-header-cell *matHeaderCellDef>Soluciones</th>
-              <td mat-cell *matCellDef="let element">{{ element.solutions }}</td>
-            </ng-container>
+              <td mat-cell *matCellDef="let element">
+                {{ element.solutions }}
+              </td>
+            </ng-container>            
 
-            <ng-container matColumnDef="problems">
-              <th mat-header-cell *matHeaderCellDef>Problemas</th>
-              <td mat-cell *matCellDef="let element">{{ element.problems }}</td>
+            <ng-container matColumnDef="ranking">
+              <th mat-header-cell *matHeaderCellDef>Ranking</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.ranking }}
+              </td>
             </ng-container>
 
             <ng-container matColumnDef="actions">
@@ -211,18 +195,10 @@
                 </button>
 
                 <mat-menu #menu="matMenu">
-                  <button mat-menu-item (click)="popAddDocumentTheme()">
-                    <mat-icon>add_circle</mat-icon>
-                    <span>Agregar problematica</span>
-                  </button>
                   <button mat-menu-item>
                     <mat-icon>edit</mat-icon>
-                    <span>Editar problematica</span>
+                    <span>Editar tema</span>
                   </button>
-                  <button mat-menu-item (click)="linkSubcategory(element._id)">
-                    <mat-icon>visibility</mat-icon>
-                    <span>Abrir problematica</span>
-                  </button>                  
                 </mat-menu>
                 
               </td>
