--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -211,7 +211,7 @@
                 </button>
 
                 <mat-menu #menu="matMenu">
-                  <button mat-menu-item (click)="popAddDocumentTheme()">
+                  <button mat-menu-item (click)="popAddDocumentTheme(element._id)">
                     <mat-icon>add_circle</mat-icon>
                     <span>Agregar problematica</span>
                   </button>
