--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -13,6 +13,7 @@
           <div>categoria</div>
         </ng-template>
         <li>{{ selectedCategory.category.name }}</li>
+        <li>{{ subcategory.category.name }}</li>
       </breadcrumbs-component>
     </div>
     <div class="set-6 txt-right">
@@ -99,15 +100,9 @@
             </p>
 
             <ol class="top-list">
-              <!--li class="top-list-item">
-                <span>Inseguridad</span>
+              <li class="top-list-item" *ngFor="let solution of solutions.slice(0, 4);">
+                <span>{{solutions[0].title}}</span>
               </li>
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li-->
             </ol> 
           </div>
         </mat-card>
@@ -121,16 +116,16 @@
               <mat-icon class="icon-warnings">warning</mat-icon>
             </p>
 
-            <!--ol class="top-list">
+            <ol class="top-list">
               <li class="top-list-item" *ngFor="let topic of topics.slice(0, 4);">
-                <span>{{topic.title}}</span>
+                <span (click)="linkTopic(topic._id)">{{topic.title}}</span>
               </li>
-            </ol-->
+            </ol>
           </div>
         </mat-card>
       </div>      
 
-      <div class="set-12 empty-subs category-list" *ngIf="subcategories.length == 0">
+      <div class="set-12 empty-subs category-list" *ngIf="topics.length == 0">
         <mat-card class="set-12">
           <div class="set-12 txt-center">
             <p>
@@ -138,52 +133,52 @@
             </p>
             <p>
               <strong>
-                <small>Tu documento esta vacio</small>
+                <small>Tu subcategoría esta vacía</small>
               </strong>
             </p>
-            <button type="button" mat-raised-button color="primary" (click)="popAddDocumentCategory()">
+            <!--button type="button" mat-raised-button color="primary" (click)="popAddDocumentCategory()">
               Agregar sub categoría
-            </button>
+            </button-->
           </div>
         </mat-card>
       </div>
 
-      <div class="set-12 category-list item-card" *ngIf="subcategories.length != 0">
+      <div class="set-12 category-list item-card" *ngIf="topics.length != 0">
         <mat-card>
           <p class="title">Temas</p>
           <table mat-table [dataSource]="dataSource" class="categories-table">
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let element">
-                {{element.name}}
+                {{element.title}}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="category">
               <th mat-header-cell *matHeaderCellDef>Categoría</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.category }}
+                {{ selectedCategory.category.name }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="subcategory">
               <th mat-header-cell *matHeaderCellDef>Subcategoría</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.subcategory }}
+                {{ subcategory.category.name }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="solutions">
               <th mat-header-cell *matHeaderCellDef>Soluciones</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.solutions }}
+                {{ element.solutions.length }}
               </td>
             </ng-container>            
 
             <ng-container matColumnDef="ranking">
               <th mat-header-cell *matHeaderCellDef>Ranking</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.ranking }}
+                {{ 0 }}
               </td>
             </ng-container>
 
