fixed links and fixed solutions

--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -101,7 +101,7 @@
 
             <ol class="top-list">
               <li class="top-list-item" *ngFor="let solution of solutions.slice(0, 4);">
-                <span>{{solutions[0].title}}</span>
+                <span>{{solution.title}}</span>
               </li>
             </ol> 
           </div>
