--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -177,7 +177,7 @@
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Título</th>
               <td mat-cell *matCellDef="let element">
-                <a href="javascript:void(0)">{{element.category.name}}</a>
+                <a href="javascript:void(0)" (click)="linkSubcategory(element._id)">{{element.category.name}}</a>
               </td>
             </ng-container>
 
