--- a/src/app/documents/single-theme/single-theme.component.scss
+++ b/src/app/documents/single-theme/single-theme.component.scss
@@ -52,16 +52,22 @@
     display: grid;
     column-gap: 25pt;
     row-gap: 25pt;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 3fr;
     margin-top: 15pt;
 
     .images-card {
-      grid-column: 1 / span 1;
+      grid-area: 1 / 1 / 2 / 5;
       width: 100%;
 
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-end;
+      flex-direction: column;
+
+      avatars-row {
+        margin: 0;
+      }
 
       carousel-component {
         width: 100%;
@@ -79,8 +85,8 @@
 
         .item {
           margin: 5pt;
-          width: 150px;
-          height: 100%;
+          width: 350px;
+          height: 300px;
           object-fit: cover;
           border-radius: 5px;
         }
@@ -95,7 +101,7 @@
     }
 
     .about-card {
-      grid-column: 2 / span 1;
+      grid-area: 1 / 5 / 2 / 13;
       width: 100%;
 
       textarea {
@@ -104,7 +110,7 @@
     }
 
     .table-card {
-      grid-column: 1 / span 1;
+      grid-area: 2 / 1 / 3 / 5;
       width: 100%;
 
       .mat-column-title {
@@ -143,13 +149,13 @@
       // justify-content: center;
 
       &.donut {
-        grid-column: 2 / span 1;
+        grid-area: 2 / 5 / 2 / 13;
       }
       &.bars {
-        grid-column: 2 / span 1;
+        grid-column: 4 / 12;
       }
       &.circle {
-        grid-column: 2 / span 1;
+        grid-column: 4 / 12;
       }
 
       .title {
@@ -161,8 +167,6 @@
       .content {
         // display: grid;
         // grid-template-columns: 10fr 3fr;
-
-     
 
         // display: flex;
         // justify-content: center;
