reorganizar and links

--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -193,7 +193,7 @@
       </div>
     </mat-card>
 
-    <!-- <mat-card class="card-chart circle">
+    <mat-card class="card-chart circle">
       <p class="title">Título de la gráfica</p>
       <div class="content">
         <canvas
@@ -206,6 +206,6 @@
 
 
       </div>
-    </mat-card> -->
+    </mat-card>
   </div>
 </div>
