--- a/src/app/documents/single-theme/single-theme.component.scss
+++ b/src/app/documents/single-theme/single-theme.component.scss
@@ -53,17 +53,28 @@
     column-gap: 25pt;
     row-gap: 25pt;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 3fr;
+    // grid-template-rows: 3fr;
     margin-top: 15pt;
 
     .images-card {
       grid-area: 1 / 1 / 2 / 5;
       width: 100%;
-
+      padding: 0;
       display: flex;
-      justify-content: center;
-      align-items: flex-end;
+      overflow: hidden;
       flex-direction: column;
+
+      .footer {
+        width: 100%;
+        padding: 2em;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        > * {
+          margin: 0;
+        }
+      }
 
       avatars-row {
         margin: 0;
@@ -84,9 +95,8 @@
         }
 
         .item {
-          margin: 5pt;
-          width: 350px;
-          height: 300px;
+          width: 100%;
+          height: 550px;
           object-fit: cover;
           border-radius: 5px;
         }
@@ -96,6 +106,7 @@
           min-width: 150px;
           align-items: center;
           justify-content: center;
+          cursor: pointer;
         }
       }
     }
@@ -103,14 +114,29 @@
     .about-card {
       grid-area: 1 / 5 / 2 / 13;
       width: 100%;
+      padding: 2em;
 
-      textarea {
-        height: 80px;
+      .box {
+        margin-bottom: 2em;
+        
+        .title {
+          font-size: 12pt;
+          font-weight: 500;
+          color: rgb(161, 161, 161);
+          margin-bottom: 0.7em;
+        }
+
+        .text {
+          font-size: 12pt;
+          color: #000;
+          letter-spacing: 1px;
+          line-height: 15pt;
+        }
       }
     }
 
     .table-card {
-      grid-area: 2 / 1 / 3 / 5;
+      grid-area: 2 / 5 / 3 / 13;
       width: 100%;
 
       .mat-column-title {
@@ -149,13 +175,13 @@
       // justify-content: center;
 
       &.donut {
-        grid-area: 2 / 5 / 2 / 9;
+        grid-area: 2 / 1 / 3 / 5;
       }
-      &.bars {
-        grid-column: 4 / 12;
-      }
+      // &.bars {
+      //   grid-column: 4 / 12;
+      // }
       &.circle {
-        grid-area: 2 / 9 / 2 / 13;
+        grid-area: 3 / 1 / 4 / 5;
       }
 
       .title {
@@ -165,17 +191,17 @@
       }
 
       // .content {
-        // display: grid;
-        // grid-template-columns: 10fr 3fr;
+      // display: grid;
+      // grid-template-columns: 10fr 3fr;
 
-        // display: flex;
-        // justify-content: center;
-        // width: 100%;
+      // display: flex;
+      // justify-content: center;
+      // width: 100%;
 
-        // .label {
-        //   font-size: 11pt;
-        //   max-width: 100px;
-        // }
+      // .label {
+      //   font-size: 11pt;
+      //   max-width: 100px;
+      // }
       // }
     }
   }
