--- a/src/app/components/avatars-row/avatars-row.component.html
+++ b/src/app/components/avatars-row/avatars-row.component.html
@@ -21,8 +21,7 @@
         src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
     </div-->
     <div class="avatar more" *ngFor="let avatar of users">
-      {{avatar.user.firstname[0]}}
-      {{avatar.user.lastname[0]}}
+      {{avatar.user.firstname[0] + avatar.user.lastname[0]}}      
     </div>
   </div>
 </div>
