--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,4 @@
   <!-- <div class="message-box" [user]="user" *ngIf="isDataAvailable"></div> -->
 </div>
 
-<div class="set-12 app-footer"></div>
+<!-- <div class="set-12 app-footer"></div> -->
