--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -4,7 +4,7 @@
       <img src="../../../assets/images/PANDOlogo.png" alt="PANDO" (click)="linkMe('home')">
     </div>
     <div class="set-9">
-      <input type="text" placeholder="Búscar en PANDO...">
+      <input type="text" placeholder="Búscar en PANDO..." class="bar-search" disabled>
     </div>
   </div>
 
