--- a/src/app/components/app-pagelet/app-pagelet.component.scss
+++ b/src/app/components/app-pagelet/app-pagelet.component.scss
@@ -5,7 +5,7 @@
   mat-toolbar {
     height: 80px;
     padding: 0 40px;
-    background: rgba($color: #ffffff, $alpha: 1);
+    background: rgba($color: #ffffff, $alpha: 0.9);
     box-shadow: 0px 1px 11px rgba(0, 0, 0, 0.1);
     position: fixed;
     z-index: 300;
@@ -31,6 +31,11 @@
       width: 100%;
       border-radius: 4px;
     }
+  }
+
+  .bar-search:disabled {
+    opacity: .4;
+    cursor: not-allowed;
   }
 
   .navigation {
