--- a/src/app/hub/components/admin-template/admin-template.component.html
+++ b/src/app/hub/components/admin-template/admin-template.component.html
@@ -42,7 +42,7 @@
                 <mat-icon>edit</mat-icon>
               </button>
               <button type="button" matTooltip="Abrir" (click)="linkMe('/documentos/' + document._id)">
-                <mat-icon>file_open</mat-icon>
+                <mat-icon>description</mat-icon>
               </button>
               <button type="button" matTooltip="Datos" (click)="displayDocumentData(document._id)">
                 <mat-icon>pie_chart</mat-icon>
