--- a/src/app/hub/components/editor-template/editor-template.component.html
+++ b/src/app/hub/components/editor-template/editor-template.component.html
@@ -17,7 +17,7 @@
                 <mat-icon>edit</mat-icon>
               </button>
               <button type="button" matTooltip="Abrir" (click)="linkMe('/documentos/' + document._id)">
-                <mat-icon>file_open</mat-icon>
+                <mat-icon>description</mat-icon>
               </button>
               <button type="button" matTooltip="Datos">
                 <mat-icon>pie_chart</mat-icon>
