--- a/src/app/components/avatars-row/avatars-row.component.scss
+++ b/src/app/components/avatars-row/avatars-row.component.scss
@@ -93,8 +93,8 @@
 @media screen and (max-width: 1500px) {
   .avatars-row {
     .title {
-      margin-bottom: 1em;
-      margin-right: 0;
+      // margin-bottom: 1em;
+      margin-right: 10px;
     }
   }
 }
