--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -103,7 +103,7 @@
               <li class="top-list-item" *ngFor="let solution of solutions.slice(0, 4);">
                 <span>{{solution.title}}</span>
               </li>
-            </ol> 
+            </ol>
           </div>
         </mat-card>
       </div>
@@ -118,12 +118,12 @@
 
             <ol class="top-list">
               <li class="top-list-item" *ngFor="let topic of topics.slice(0, 4);">
-                <span (click)="linkTopic(topic._id)">{{topic.title}}</span>
+                <span>{{topic.title}}</span>
               </li>
             </ol>
           </div>
         </mat-card>
-      </div>      
+      </div>
 
       <div class="set-12 empty-subs category-list" *ngIf="topics.length == 0">
         <mat-card class="set-12">
@@ -150,7 +150,7 @@
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let element" (click)="linkTopic(element._id)">
-                <a href="javascript:void(0)" >{{element.title}}</a>
+                <a href="javascript:void(0)">{{element.title}}</a>
               </td>
             </ng-container>
 
@@ -173,7 +173,7 @@
               <td mat-cell *matCellDef="let element">
                 {{ element.solutions.length }}
               </td>
-            </ng-container>            
+            </ng-container>
 
             <ng-container matColumnDef="ranking">
               <th mat-header-cell *matHeaderCellDef>Ranking</th>
@@ -195,7 +195,7 @@
                     <span>Editar tema</span>
                   </button>
                 </mat-menu>
-                
+
               </td>
             </ng-container>
 
