--- a/src/app/documents/single-theme/single-theme.component.scss
+++ b/src/app/documents/single-theme/single-theme.component.scss
@@ -5,6 +5,29 @@
   width: 100%;
   height: auto;
 
+  .imghldr {
+    min-height: 150px;
+    max-height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba($color: #CEDDFF, $alpha: 0.4);
+    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
+    overflow: hidden;
+
+    mat-icon {
+      font-size: 70pt;
+      color: rgba($color: #000000, $alpha: 0.1);
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      object-fit: contain;
+    }
+  }
+  
   .header {
     width: 100%;
     display: flex;
