--- a/src/app/public-documents/topic/topic.component.scss
+++ b/src/app/public-documents/topic/topic.component.scss
@@ -76,7 +76,8 @@
   .card-item {
     background-color: white;
     border-radius: 6px;
-    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
+      0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 
     .title {
       font-size: 14px;
@@ -195,4 +196,25 @@
   background-color: rgb(131, 131, 131);
   border-radius: 20px;
   height: 2px;
+}
+.favorite-button {
+  position: fixed;
+  margin-left: 25px;
+  left: 320px;
+  top: 110px;
+  .favorite {
+    width: 32px;
+    height: 32px;
+    background-color: #e98282;
+    border: solid;
+    border-radius: 100%;
+    border-color: #ffff;
+    display: flex;
+    align-items: center;
+    .mat-icon {
+      font-size: 12px;
+      height: 18px;
+      width: 18px;
+    }
+  }
 }
