feat: boton permiso para editar

--- a/src/app/components/app-pagelet/app-pagelet.component.scss
+++ b/src/app/components/app-pagelet/app-pagelet.component.scss
@@ -101,3 +101,12 @@
     }
   }
 }
+
+
+ .btn-permissios{
+  background-color: #306EFF;
+  width: 224px;
+  height: 35px;
+  color: #fff;
+  border-radius: 5px;
+} 
