--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -9,6 +9,11 @@
   </div>
 
   <div class="set-6 navigation">
+
+    <button *ngIf="path === 1" type="button" class="btn-permissios" (click)="btnPermissions()">
+      Permiso para editar
+   </button> 
+
     <button type="button">
       <span>Ciudadanos</span>
     </button>
