--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -14,14 +14,25 @@
     <div class="set-2">
       <div class="header-buttons">
         <div class="button-box">
-          <button type="button" mat-mini-fab color="warn" class="add-button green">
+          <button
+            type="button"
+            mat-mini-fab
+            color="warn"
+            class="add-button green"
+          >
             <mat-icon>create_new_folder</mat-icon>
           </button>
           <p>Agregar solución</p>
         </div>
+
         <div class="button-box">
-          <button type="button" mat-mini-fab color="warn" class="add-button purple">
-            <mat-icon style="color:white">create_new_folder</mat-icon>
+          <button
+            type="button"
+            mat-mini-fab
+            color="warn"
+            class="add-button purple"
+          >
+            <mat-icon style="color: white">create_new_folder</mat-icon>
           </button>
           <p>Agregar Testimonios</p>
         </div>
@@ -35,7 +46,7 @@
         <card-document-public></card-document-public>
       </div>
       <div class="set-12 mt-2">
-        <mat-card class="doc-description" style="height: 480px;padding: 30px;">
+        <mat-card class="doc-description" style="height: 480px; padding: 30px">
           <div class="set-12 mt-2">
             <div class="set-6 col-rgt-2">
               <spider-chart [withBorder]="false"></spider-chart>
