--- a/src/app/public-documents/topic/topic.component.scss
+++ b/src/app/public-documents/topic/topic.component.scss
@@ -198,7 +198,7 @@
   height: 2px;
 }
 .favorite-button {
-  position: fixed;
+  position: absolute;
   margin-left: 25px;
   left: 320px;
   top: 110px;
