--- a/src/app/hub/components/map-box/map-box.component.html
+++ b/src/app/hub/components/map-box/map-box.component.html
@@ -1,36 +1,21 @@
 <div class="set-12 map-container">
   <mat-card>
     <div class="map" #svgMapBox>
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        xmlns:amcharts="http://amcharts.com/ammap"
-        xmlns:xlink="http://www.w3.org/1999/xlink"
-        version="1.1"
-        class="draw-map"
-      >
+      <svg xmlns="http://www.w3.org/2000/svg" xmlns:amcharts="http://amcharts.com/ammap"
+        xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" class="draw-map">
         <g>
-          <path
-            class="land"
-            *ngFor="let statePath of mapStates"
-            (click)="onClickState(statePath)"
-            [id]="statePath.id"
-            [title]="statePath.title"
-            [attr.d]="statePath.d"
-            [ngClass]="selectedState.id === statePath.id ? 'active' : ''"
-          />
+          <path class="land" *ngFor="let statePath of mapStates" (click)="onClickState(statePath)" [id]="statePath.id"
+            [title]="statePath.title" [attr.d]="statePath.d"
+            [ngClass]="selectedState.id === statePath.id ? 'active' : ''" />
         </g>
       </svg>
     </div>
 
     <!-- DATA -->
     <div class="aside-data">
-      <mat-form-field
-        appearance="fill"
-        *ngIf="isDataAvailable"
-        class="select-full"
-      >
+      <mat-form-field appearance="outline" *ngIf="isDataAvailable" class="select-full">
         <mat-label>Cobertura</mat-label>
-        <mat-select multiple>
+        <mat-select>
           <mat-option *ngFor="let state of states">
             <small>{{ state.name }}</small>
           </mat-option>
@@ -62,13 +47,7 @@
       </div>
 
       <div class="chart-container">
-        <canvas
-          class="donut-chart"
-          baseChart
-          [data]="data"
-          [type]="'doughnut'"
-          [options]="chartOptions"
-        ></canvas>
+        <canvas class="donut-chart" baseChart [data]="data" [type]="'doughnut'" [options]="chartOptions"></canvas>
 
         <p>
           Categorias <br />
