--- a/src/app/public-documents/solution/solution.component.scss
+++ b/src/app/public-documents/solution/solution.component.scss
@@ -75,7 +75,8 @@
   .card-item {
     background-color: white;
     border-radius: 6px;
-    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
+      0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 
     .title {
       font-size: 14px;
@@ -175,6 +176,88 @@
       p {
         font-size: 12px;
         font-weight: 500;
+      }
+    }
+  }
+
+  .header-card {
+    mat-card {
+      padding: 0;
+      display: flex;
+
+      .image-box {
+        width: 40%;
+        position: relative;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+
+        .info {
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 15pt 10pt;
+
+          .custom-circle {
+            width: 70pt;
+            height: 70pt;
+            border-radius: 50%;
+            border: 2px solid #fff;
+            background-color: #ceddff;
+            cursor: auto;
+            margin: 0;
+            margin-right: 20pt;
+
+            mat-icon {
+              color: #306eff;
+              font-size: 24pt;
+            }
+          }
+
+          .actions {
+            margin: 0;
+            p {
+              font-size: 17pt;
+              color: #fff;
+              text-shadow: 0 0 4px #4b4b4b;
+            }
+
+            button {
+              width: 100%;
+              margin-top: 8pt;
+            }
+          }
+        }
+      }
+
+      .data-box {
+        width: 60%;
+        padding: 30px;
+
+        .title {
+          font-size: 16pt;
+          text-transform: uppercase;
+          margin-bottom: 25pt;
+          font-weight: 600;
+        }
+
+        .short-description {
+          color: #636363;
+          font-size: 13pt;
+          line-height: 19pt;
+        }
+
+        .show-more {
+          display: block;
+          margin-top: 20pt;
+          text-decoration: underline;
+          color: #306eff;
+        }
       }
     }
   }
