--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -5,7 +5,7 @@
         <li class="breadcrumb-item">{{ document.title }}</li>
         <li class="breadcrumb-item">{{ category.category.name }}</li>
 
-        <li>{{ subcategorySelected.category.name }}</li>
+        <li>{{ subcategory.category.name }}</li>
       </breadcrumbs-component>
     </div>
     <div class="set-4 featured-users">
@@ -13,21 +13,21 @@
     </div>
   </div>
 
-  <div class="set-12" style="padding-bottom: 100px;margin-top: 20px;" *ngIf="subcategorySelected">
+  <div class="set-12" style="padding-bottom: 100px;margin-top: 20px;" *ngIf="subcategory">
     <div class="set-4 col-rgt-3">
       <mat-card class="doc-description">
         <div class="imghldr">
           <img src="../../../assets/images/stand.png" alt="" style="width: 100%" />
         </div>
         <div class="infohldr">
-          <p class="card-title">{{ subcategorySelected.category.name }}</p>
-          <expanded-text [text]="subcategorySelected.description" [minLength]="200"></expanded-text>
+          <p class="card-title">{{ subcategory.category.name }}</p>
+          <expanded-text [text]="subcategory.description" [minLength]="200"></expanded-text>
         </div>
       </mat-card>
     </div>
     <div class="set-8">
       <div class="main-box">
-        <panel-subcategory [data]="category.subLayouts"></panel-subcategory>
+        <panel-subcategory [data]="category.subLayouts" [selectedID]="subcategory._id"></panel-subcategory>
         <div class="set-12 container-titles">
           <div class="set-6 title">
             <p>
@@ -48,20 +48,20 @@
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
-                  <p style="font-weight: 500">{{ element.name }}</p>
+                  <p style="font-weight: 500">{{ element.title }}</p>
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="ranking">
                 <th mat-header-cell *matHeaderCellDef>Ranking</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.ranking }}
+                  {{ 0 }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="users">
                 <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-                <td mat-cell *matCellDef="let element">{{ element.users }}</td>
+                <td mat-cell *matCellDef="let element">{{ 0 }}</td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -73,20 +73,20 @@
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
-                  <a style="font-weight: 500;cursor:pointer" (click)="redirect(element.ranking)">{{ element.name }}</a>
+                  <a style="font-weight: 500;cursor:pointer;" (click)="redirect(element._id)">{{ element.title }}</a>
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="ranking">
                 <th mat-header-cell *matHeaderCellDef>Ranking</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.ranking }}
+                  {{ 0 }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="users">
                 <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-                <td mat-cell *matCellDef="let element">{{ element.users }}</td>
+                <td mat-cell *matCellDef="let element">{{ 0 }}</td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
