--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -1,11 +1,11 @@
-<div class="container">
+<div class="container" *ngIf="topic">
   <div class="set-12">
     <div class="set-6">
       <breadcrumbs-component>
-        <li class="breadcrumb-item">Documento madre</li>
-        <li class="breadcrumb-item">Economia</li>
-
-        <li>Empleo</li>
+        <li class="breadcrumb-item">{{document.title}}</li>
+        <li class="breadcrumb-item">{{category.category.name}}</li>
+        <li class="breadcrumb-item">{{subcategory.category.name}}</li>
+        <li>{{topic.title}}</li>
       </breadcrumbs-component>
       <div class="favorite-button">
         <button
@@ -51,11 +51,39 @@
 
   <div class="set-12" style="padding-bottom: 100px; margin-top: 20px">
     <div class="set-8 col-rgt-3">
-      <div class="set-12">
-        <card-document-public></card-document-public>
+      <div class="set-12 header-card">
+        <mat-card>
+          <!-- IMAGE -->
+          <div class="image-box">
+            <img
+              src="https://images.pexels.com/photos/1117452/pexels-photo-1117452.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt="doc-image"
+            />
+
+            <div class="info">
+              <button class="custom-circle">
+                <mat-icon>thumb_up</mat-icon>
+              </button>
+
+              <div class="actions">
+                <p>
+                  Relevancia ciudadana
+                  <br />
+                  <b>8</b>
+                </p>
+                <button mat-raised-button color="primary">Vota</button>
+              </div>
+            </div>
+          </div>
+          <!-- DATA -->
+          <div class="data-box">
+            <p class="title">{{ topic.title }}</p>
+            <expanded-text [text]="topic.description"[minLength]="400"> </expanded-text>
+          </div>
+        </mat-card>
       </div>
       <div class="set-12 mt-2">
-        <solutions-card [data]="solutions"></solutions-card>
+        <solutions-card [data]="solutionsData"></solutions-card>
       </div>
     </div>
     <div class="set-4">
