--- a/src/app/components/circle-chart/circle-chart.component.scss
+++ b/src/app/components/circle-chart/circle-chart.component.scss
@@ -2,4 +2,17 @@
   canvas {
     width: 100%;
   }
+  .chart-container {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    .chart-data {
+      position: absolute;
+      top: 60%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      font-size: 1.5rem;
+    }
+  }
 }
