--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -90,7 +90,7 @@
       </div>
     </div>
     <div class="set-4">
-      <public-documents-testimonials></public-documents-testimonials>
+      <public-documents-testimonials [data]="topic.testimonials"></public-documents-testimonials>
     </div>
   </div>
 </div>
