--- a/src/app/public-documents/components/testimonials/testimonials.component.scss
+++ b/src/app/public-documents/components/testimonials/testimonials.component.scss
@@ -8,6 +8,12 @@
     font-weight: 500;
     text-align: left;
   }
+  .description {
+    margin: 10px 0px;
+    font-size: 12pt;
+    font-weight: 400;
+    text-align: left;
+  }
 
   .content {
     max-height: 600px;
@@ -26,7 +32,7 @@
       border-radius: 5px;
     }
     &::-webkit-scrollbar-thumb:hover {
-      background: #A5A5A5;
+      background: #a5a5a5;
     }
 
     .testimonial-item {
@@ -53,7 +59,7 @@
         align-items: flex-start;
         justify-content: center;
         flex-direction: column;
-
+        
         .about {
           display: flex;
           align-items: center;
